--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/voedselbos
+server.port=8081
+spring.datasource.username=userVoedselbos
+spring.datasource.password=userVoedselbosPW
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
